--- a/Source Code/KTXSV/Views/AdminRooms/Details.cshtml
+++ b/Source Code/KTXSV/Views/AdminRooms/Details.cshtml
@@ -62,6 +62,8 @@
                     case "Ended": statusText = "Đã kết thúc"; badgeClass = "dark"; break;
                     case "Transferred": statusText = "Đã chuyển"; badgeClass = "warning"; break;
                     case "Canceled": statusText = "Đã hủy"; badgeClass = "secondary"; break;
+                    case "Expiring": statusText = "Sắp hết hạn"; badgeClass = "warning"; break;
+
                 }
 
                 <tr>
@@ -81,8 +83,8 @@
                             {
                                 @Html.AntiForgeryToken()
                                 <input type="hidden" name="bedID" value="@s.Bed.BedID" />
-                                <button type="submit" class="btn btn-sm btn-success ml-1"
-                                        onclick="return confirm('Bạn có chắc chắn muốn mở giường này cho đăng ký?');">
+                                <button type="submit" class="btn btn-sm btn-outline-success ml-1"
+                                        onclick="return confirm('Nếu cho phép sinh viên khác có thể đăng ký giường này! Bạn muốn cho phép đăng ký chứ ?');">
                                     Cho phép đăng ký
                                 </button>
                             }
@@ -91,7 +93,18 @@
                         {
                             <span class="badge bg-warning ml-1">Đã mở cho đăng ký</span>
                         }
+                        @if (s.Status == "Expiring")
+                        {
+                            <a href="@Url.Action("Renew", "AdminRooms", new { id = s.RegID })"
+                               class="btn btn-sm btn-warning ml-1">Gia hạn</a>
+                        }
+                        else
+                        {
+                            <button class="btn btn-sm btn-secondary ml-1" disabled>Gia hạn</button>
+                        }
+
                     </td>
+
                 </tr>
             }
         }
