--- a/Source Code/KTXSV/Views/Shared/_Layout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 
                     <li class="nav-item"><a class="nav-link text-dark" href="/Phong/DanhSachPhong">Phòng đã đăng ký</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="/ThanhToan/HoaDon">Thanh toán</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="/Admin/Notifications">Thông báo</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="/ThongBao/ThongBao">Thông báo</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="/SupportRequests/Index">Hỗ trợ</a></li>
 
                     @if (Session["UserID"] != null)
